--- a/src/components/Table.module.css
+++ b/src/components/Table.module.css
@@ -27,3 +27,12 @@
   background-color: #04aa6d;
   color: white;
 }
+
+/* .active {
+  background-color: #04aa6d !important;
+  color: #fff !important;
+}
+
+.muted {
+  pointer-events: none;
+} */
